tests/src/frontend/typechecking/exhaustiveness/invalid/multiple_inheritance_common_child.sk
base class L
base class R
class A() extends L
class B() extends L, R
class C() extends R

fun test<T: L & R>(x: T): void {
  x match {
  | A _ -> void
  | B _ -> void
  }
}
